# backend/src/Routes/userRoutes.ts
@@ -1,9 +1,8 @@
 import express from "express";
-import { createUser, getRoleType, login } from "../Controller/userController";
+import { createUser, login } from "../Controller/userController";
 
 const router = express.Router();
 
-router.route("/getRoleType").get(getRoleType);
 router.route("/createUser").post(createUser);
 router.route("/login").post(login);
 
